maintainIT2/src/objects/PO_Part_Transaction__c.object
<CustomObject>
    <description>Preventive Maintenance Schedules</description>
    <fields>
        <fullName>Auto_Schedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The Auto Release checkbox, Default = True, makes this PM Schedule available for the batch scheduling process.  Uncheck if you want to the Work Orders automatically generated and released for this PM Schedule.</description>
        <inlineHelpText>The Auto Release checkbox, Default = True, makes this PM Schedule available for the batch scheduling process.  Uncheck if you want to manually release the Work Orders for this PM Schedule.</inlineHelpText>
        <label>Auto Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CBDD__c</fullName>
        <description>System Calculated Calendar Based Due Date</description>
        <formula>IF( SBC__c = True, IF(  FI__c  = True,   IF(TEXT( Scheduling_Interval_UOM__c ) = &quot;Days&quot; ,   LWOCD__c    +  Scheduling_Interval__c,   LWOCD__c    +  Scheduling_Interval__c * 7)  ,   IF(TEXT( Scheduling_Interval_UOM__c ) = &quot;Days&quot;, CWODD__c  +  Scheduling_Interval__c, CWODD__c  +  Scheduling_Interval__c * 7) ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System Calculated Calendar Based Due Date</inlineHelpText>
        <label>Calendar Based Due Date</label>
        <type>Date</type>
    </fields>

    
   
    <fields>
        <fullName>Current_WO_Status_Num__c</fullName>
        <description>Formula reference to the Current Work Order Status Num (numerical cross reference to the Work Order Status).</description>
        <formula>Current_Work_Order__r.Status_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Current Work Order Status Num (numerical cross reference to the Work Order Status).</inlineHelpText>
        <label>Current WO Status Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_WO_Status__c</fullName>
        <description>Formula reference to the Current Work Order Status</description>
        <formula>TEXT(Current_Work_Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Current Work Order Status</inlineHelpText>
        <label>Current WO Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Current Work Order is the LAST system generated Work Order for this PM Schedule.  System populated via workflow.  Field security should be set to read only for all user profiles.</description>
        <inlineHelpText>Current Work Order for this PM Schedule.  System populated via workflow.  Field security should be set to read only for all user profiles.</inlineHelpText>
        <label>Current Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>PM Schedules (Current Work Order)</relationshipLabel>
        <relationshipName>PM_Schedules_cwo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Account_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This entry specifies the Default Vendor (Account where Vendor = True) Assignment to be made on the Work Order when generated through the PM Scheduling Process</description>
        <inlineHelpText>This entry specifies the Default Vendor (Account where Vendor = True) Assignment to be made on the Work Order when generated through the PM Scheduling Process</inlineHelpText>
        <label>Default Account Assignment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Select a Vendor to serve as the Default Assignment when the PM Schedule Process generates a Work Order. You may clear this filter to assign to ANY type of Account.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PM Schedules</relationshipLabel>
        <relationshipName>PM_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_User_Assignment_Active__c</fullName>
        <description>If the Default User Assignment Is Active = True, then the Work Order record Owner will be reassigned to this user when system generated.  This reassignment enables you to deploy ownership based record sharing rules.</description>
        <formula>Default_User_Assignment__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Default User Assignment Is Active = True, then the Work Order record Owner will be reassigned to this user when system generated.  This reassignment enables you to deploy ownership based record sharing rules.</inlineHelpText>
        <label>Default User Assignment Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_User_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This entry specifies the Default User Assignment to be made on the Work Order when generated through the PM Scheduling Process</description>
        <inlineHelpText>This entry specifies the Default User Assignment to be made on the Work Order when generated through the PM Scheduling Process</inlineHelpText>
        <label>Default User Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PM_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equip_Description__c</fullName>
        <description>Formula Referencing Asset Tag Description</description>
        <formula>Equipment__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula Referencing Maintenance Asset Description</inlineHelpText>
        <label>Asset Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset Tag ID for the PM Schedule - User Specified.</description>
        <inlineHelpText>Asset Tag ID for the PM Schedule - User Specified.</inlineHelpText>
        <label>Asset Tag</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>PM Schedules</relationshipLabel>
        <relationshipName>PM_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FI__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If &quot;Floating Interval&quot; is checked, then the Calendar Based PM Due Date = Last Work Order Completion Date + Calendar Interval.  If &quot;Floating Interval&quot; is unchecked, then Calendar Based PM Due Date = Current Work Order Schedule Date + Calendar Interval</description>
        <inlineHelpText>If &quot;Floating Interval&quot; is checked, then the Calendar Based PM Due Date = Last Work Order Completion Date + Calendar Interval.

If &quot;Floating Interval&quot; is unchecked, then Calendar Based PM Due Date = Current Work Order Schedule Date + Calendar Interval</inlineHelpText>
        <label>Floating Interval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMIPR__c</fullName>
        <description>The Initial Meter Interval Percent Remaining is used to schedule the first work order for a meter based PM Schedule and represents the outstanding percentage of the Meter Schedule Interval</description>
        <formula>IF ( MSI__c  &lt;=  0  ||  ISBLANK(IMRDV__c) , 0  ,  IF( LMRV__c &gt;  IMRDV__c , 0, ( IMRDV__c  -  LMRV__c )  /  MSI__c)  )</formula>
        <inlineHelpText>The Initial Meter Interval Percent Remaining is used to schedule the first work order for a meter based PM Schedule and represents the outstanding percentage of the Meter Schedule Interval</inlineHelpText>
        <label>Initial Meter Interval % Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IMRDV__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The Initial Meter Reading Due Value represents the meter reading value that must be reached for the initial work order to be due on this PM Schedule.</description>
        <inlineHelpText>The Initial Meter Reading Due Value represents the meter reading value that must be reached for the initial work order to be due on this PM Schedule.</inlineHelpText>
        <label>Initial Meter Reading Due Value</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_PM_WO_Due_Date__c</fullName>
        <description>The Initial PM WO Due Date is used to override the PM Due Date for the initial work order that is created.  This value must be populated prior to changing the PM Status from Draft to Active.  This status change event fires the APEX code to create the initial work order</description>
        <inlineHelpText>Overrides the PM Due Date for the first work order</inlineHelpText>
        <label>Initial PM WO Due Date</label>
        <type>Date</type>
    </fields>
    
    <fields>
        <fullName>LWOCD__c</fullName>
        <description>Formula reference to the Last Work Order Completion Date</description>
        <formula>Last_WO_Completed__r.Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Last Work Order Completion Date</inlineHelpText>
        <label>Last WO Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_WO_Completed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Last Completed Work Order for this PM Schedule.  System populated via APEX code.  Field security should be set to Read Only for all user profiles.</description>
        <inlineHelpText>Last Completed Work Order for this PM Schedule.  System populated via APEX code.  Field security should be set to Read Only for all user profiles.</inlineHelpText>
        <label>Last WO Completed</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>PM Schedules (Last Completed Work Order)</relationshipLabel>
        <relationshipName>PM_Schedules_lwo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBPDD__c</fullName>
        <description>Projected Due Date for the PM if using Meter Based Scheduling.  Based on a linear projection using the Last Work Order Completion Date, Last Meter Read Date, and Last Meter Reading Value.</description>
        <formula>IF( MIPC__c  &lt;= 0, NULL, (FLOOR( MRDD__c  /  MIPC__c )  +  LWOCD__c )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Projected Due Date for the PM if using Meter Based Scheduling.  Based on a linear projection using the Last Work Order Completion Date, Last Meter Read Date, and Last Meter Reading Value.</inlineHelpText>
        <label>Meter Based Projected Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MIPC__c</fullName>
        <description>Percent of Schedule Interval Complete based on meter reading values</description>
        <formula>IF( SBM__c  = True &amp;&amp; NOT(ISBLANK(  Last_WO_Completed__c  )), ( ( LMRVC__c  -  MRAWOC__c) /  MSI__c ) , 0)</formula>
        <inlineHelpText>Percent of Schedule Interval Complete based on meter reading values</inlineHelpText>
        <label>Meter Interval % Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MRAWOC__c</fullName>
        <description>Cumulative Meter Reading at Work Order Completion</description>
        <formula>Last_WO_Completed__r.CMRVAWOC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cumulative Meter Reading at Work Order Completion</inlineHelpText>
        <label>Cumulative Meter Reading at WO Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRAWOComp__c</fullName>
        <description>Meter Reading at Work Order Completion</description>
        <formula>Last_WO_Completed__r.MRVAWOC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Meter Reading at Work Order Completion (differs from Cumulative Meter Reading at Work Order Completion if the Meter has been replaced)</inlineHelpText>
        <label>Meter Reading at WO Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRDD__c</fullName>
        <description>Meter Reading Days Difference (MRDD) represents the number of days between the Last Meter Read Date and the Last Work Order Completion Date.  MRDD is used to calculate the Meter Based Projected Due Date.</description>
        <formula>LMRD__c  -  LWOCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Meter Reading Days Difference (MRDD) represents the number of days between the Last Meter Read Date and the Last Work Order Completion Date.  MRDD is used to calculate the Meter Based Projected Due Date.</inlineHelpText>
        <label>Meter Reading Days Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSI__c</fullName>
        <description>Represents the intervals in the Meter UOM for scheduling - User Specified</description>
        <inlineHelpText>Represents the intervals in the Meter UOM for scheduling - User Specified</inlineHelpText>
        <label>Meter Schedule Interval</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Meter ID for PM Scheduling</description>
        <inlineHelpText>Meter ID for PM Scheduling</inlineHelpText>
        <label>Meter ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Meter__c.Maintenance_Asset__c</field>
                <operation>equals</operation>
                <valueField>$Source.Equipment__c</valueField>
            </filterItems>
            <infoMessage>Clear the filter to select a Meter that is associated a different maintenance asset</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Meter__c</referenceTo>
        <relationshipLabel>PM Schedules</relationshipLabel>
        <relationshipName>PM_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meter_UOM__c</fullName>
        <description>Formula reference to the Meter UOM</description>
        <formula>TEXT(Meter_ID__r.UOM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Meter UOM</inlineHelpText>
        <label>Meter UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_WO_Desc__c</fullName>
        <description>Formula reference to the Model Work Order Description</description>
        <formula>Model_Work_Order__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Model Work Order Description</inlineHelpText>
        <label>Model WO Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Model Work Order that this PM is based upon</description>
        <inlineHelpText>Model Work Order that this PM is based upon</inlineHelpText>
        <label>Model Work Order</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Work Order selected must be a &quot;Model Work Order&quot;</errorMessage>
            <filterItems>
                <field>Work_Order__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Model Work Order</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>PM Schedules</relationshipLabel>
        <relationshipName>PM_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
   
    <fields>
        <fullName>PMDMV__c</fullName>
        <description>The PM Due Cumulative Meter Value specifies the Cumulative Meter Reading Value at which the PM Schedule becomes due.</description>
        <formula>IF( SBM__c = True &amp;&amp; NOT(ISBLANK( Last_WO_Completed__c )) ,  (MRAWOC__c +  MSI__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The PM Due Cumulative Meter Value specifies the Cumulative Meter Reading Value at which the PM Schedule becomes due.</inlineHelpText>
        <label>PM Due Cumulative Meter Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMRD__c</fullName>
        <description>Formula reference to the Last Meter Reading Date if the PM Schedule has a related Meter</description>
        <formula>DATEVALUE( Meter_ID__r.Last_Reading_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Last Meter Reading Date if the PM Schedule has a related Meter</inlineHelpText>
        <label>Last Meter Reading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMRVC__c</fullName>
        <description>Formula reference to the Last Meter Reading Value Cumulative for the associated Meter</description>
        <formula>Meter_ID__r.Cumulative_Reading_Num__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Last Meter Reading Value Cumulative for the associated Meter</inlineHelpText>
        <label>Last Meter Read Value Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMRV__c</fullName>
        <description>Formula reference to the Last Meter Reading Value for the associated Meter</description>
        <formula>Meter_ID__r.Last_Reading_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula reference to the Last Meter Reading Value for the associated Meter</inlineHelpText>
        <label>Last Meter Reading Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Due_Date__c</fullName>
        <description>PM Due Date.  Formula reference based on Calendar/Meter Based Scheduling selection.</description>
        <formula>IF((ISBLANK( Current_Work_Order__c ) &amp;&amp; NOT(ISNULL( Initial_PM_WO_Due_Date__c ))),  Initial_PM_WO_Due_Date__c , IF( SBC__c = True, CBDD__c ,  IF( SBM__c = True, MBPDD__c,  Initial_PM_WO_Due_Date__c ) ))</formula>
        <inlineHelpText>PM Due Date.  Formula reference based on Calendar/Meter Based Scheduling selection.</inlineHelpText>
        <label>PM Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PM_Status__c</fullName>
        <description>PM Schedule Status - DO NOT EDIT AVAILABLE VALUES IN THIS PICKLIST!  Unexpected results will occur.</description>
        <inlineHelpText>PM Schedule Status - DO NOT EDIT AVAILABLE VALUES IN THIS PICKLIST!  Unexpected results will occur.</inlineHelpText>
        <label>PM Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    
    <fields>
        <fullName>SBC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enables Calendar based PM Scheduling</description>
        <inlineHelpText>Enables Calendar based PM Scheduling</inlineHelpText>
        <label>Schedule by Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Meter Based Scheduling</description>
        <inlineHelpText>Enables Meter Based Scheduling</inlineHelpText>
        <label>Schedule by Meter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduling_Interval_UOM__c</fullName>
        <description>PM Scheduling Interval UOM.  DO NOT EDIT VALUES IN THIS PICKLIST !  Unexpected resutls will occur.</description>
        <inlineHelpText>PM Scheduling Interval UOM.  DO NOT EDIT VALUES IN THIS PICKLIST !  Unexpected resutls will occur.</inlineHelpText>
        <label>Calendar Interval UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Days</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weeks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheduling_Interval__c</fullName>
        <defaultValue>1</defaultValue>
        <description>PM Scheduling Interval is the time between between PM Work Order Due Dates.</description>
        <inlineHelpText>PM Scheduling Interval is the time between between PM Work Order Due Dates.</inlineHelpText>
        <label>Calendar Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PM Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>PM_Status__c</columns>
        <columns>Initial_PM_WO_Due_Date__c</columns>
        <columns>Current_Work_Order__c</columns>
        <columns>Current_WO_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Daily_Checklists_N7D</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>PM_Due_Date__c</columns>
        <columns>Current_Work_Order__c</columns>
        <columns>Current_WO_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>FI__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PM_Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Daily Checklists Next 7 Days</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Initial_MBPM_to_Rel</fullName>
        <columns>NAME</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>MSI__c</columns>
        <columns>Meter_UOM__c</columns>
        <columns>IMIPR__c</columns>
        <columns>IMRDV__c</columns>
        <columns>LMRV__c</columns>
        <columns>LMRD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Current_WO_Status_Num__c</field>
            <operation>notEqual</operation>
            <value>1,2,3,4,5,6,7,8,9,10,11,12</value>
        </filters>
        <filters>
            <field>SBM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Initial Meter Based PMs to Release</label>
    </listViews>
    <listViews>
        <fullName>PM_No_Model_WO</fullName>
        <columns>NAME</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>PM_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Model_Work_Order__c</field>
            <operation>equals</operation>
        </filters>
        <label>PM Schedules without Model Work Orders</label>
    </listViews>
    <listViews>
        <fullName>PM_WO_90PMeter</fullName>
        <columns>NAME</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>Current_Work_Order__c</columns>
        <columns>Current_WO_Status__c</columns>
        <columns>MIPC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_WO_Status_Num__c</field>
            <operation>equals</operation>
            <value>2,3,4,7</value>
        </filters>
        <filters>
            <field>PM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>MIPC__c</field>
            <operation>greaterOrEqual</operation>
            <value>90</value>
        </filters>
        <filters>
            <field>SBM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>PM WO&apos;s Due at 90% Meter Schedule</label>
    </listViews>
    <listViews>
        <fullName>PM_WO_FIXN30D</fullName>
        <columns>NAME</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>PM_Due_Date__c</columns>
        <columns>Current_Work_Order__c</columns>
        <columns>Current_WO_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FI__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>PM_Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:30</value>
        </filters>
        <label>PM WO&apos;s Fixed Interval - Next 30 Days</label>
    </listViews>
    <listViews>
        <fullName>PM_WO_FLTN45D</fullName>
        <columns>NAME</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>PM_Due_Date__c</columns>
        <columns>Current_Work_Order__c</columns>
        <columns>Current_WO_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_WO_Status_Num__c</field>
            <operation>equals</operation>
            <value>2,3,4,7</value>
        </filters>
        <filters>
            <field>FI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>PM_Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:45</value>
        </filters>
        <label>Floating PM WO&apos;s To Release Next 45 Days</label>
    </listViews>
    <listViews>
        <fullName>PM_WO_FLTN45_TO_180D</fullName>
        <columns>NAME</columns>
        <columns>Model_Work_Order__c</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>PM_Due_Date__c</columns>
        <columns>Current_Work_Order__c</columns>
        <columns>Current_WO_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_WO_Status_Num__c</field>
            <operation>equals</operation>
            <value>2,3,4,7</value>
        </filters>
        <filters>
            <field>FI__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>PM_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>NEXT_N_DAYS:45</value>
        </filters>
        <filters>
            <field>PM_Due_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:180</value>
        </filters>
        <label>PM WO&apos;s Floating Next 46-180 Days</label>
    </listViews>
    <listViews>
        <fullName>PM_WO_Fix_N7D</fullName>
        <columns>NAME</columns>
        <columns>Model_WO_Desc__c</columns>
        <columns>Equipment__c</columns>
        <columns>Equip_Description__c</columns>
        <columns>PM_Due_Date__c</columns>
        <columns>Current_Work_Order__c</columns>
        <columns>CWODD__c</columns>
        <columns>Current_WO_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FI__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PM_Due_Date__c</field>
            <operation>equals</operation>
            <value>NEXT_WEEK</value>
        </filters>
        <filters>
            <field>PM_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Next Week Checklist Work Orders</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>PM Schedule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Calendar_Scheduling_Interval_Positive</fullName>
        <active>true</active>
        <description>Ensures that the Calendar Scheduling Interval is a Positive Value</description>
        <errorConditionFormula>Scheduling_Interval__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Scheduling_Interval__c</errorDisplayField>
        <errorMessage>The Calendar Scheduling Interval must be greater than or equal to one (1)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_PMStatus_is_Draft</fullName>
        <active>true</active>
        <description>Ensures that the initial value of the PM Schedule Status picklist is &quot;Draft&quot;</description>
        <errorConditionFormula>IF( ISNEW(),  IF(TEXT( PM_Status__c)  &lt;&gt;  &quot;Draft&quot;, True, False) , False)</errorConditionFormula>
        <errorDisplayField>PM_Status__c</errorDisplayField>
        <errorMessage>The PM Schedule must be created with an initial status of Draft.  You may create a Workflow process or manually change the status after the PM Schedule is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limits_MBS_to_Floating_CBS</fullName>
        <active>true</active>
        <description>Limits the overlay of Meter Based Scheduling to Floating Interval Calendar Based Scheduling</description>
        <errorConditionFormula>IF( SBC__c = True &amp;&amp;  FI__c = False &amp;&amp;  SBM__c = True, true, false)</errorConditionFormula>
        <errorMessage>Meter Based Scheduling cannot be used in conjunction with Fixed Interval scheduling.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meter_Scheduling_Interval_Positive</fullName>
        <active>true</active>
        <description>Ensures that the Meter Scheduling Interval is a positive value</description>
        <errorConditionFormula>IF( SBM__c  = True,  MSI__c  &lt;= 0, false)</errorConditionFormula>
        <errorDisplayField>MSI__c</errorDisplayField>
        <errorMessage>The Meter Scheduling Interval must be greater than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Meter_is_Selected</fullName>
        <active>true</active>
        <description>Ensures that a Meter ID has been input if &quot;Schedule by Meter&quot; is selected</description>
        <errorConditionFormula>IF(( SBM__c = True) ,  ISBLANK( Meter_ID__c ) , false)</errorConditionFormula>
        <errorDisplayField>Meter_ID__c</errorDisplayField>
        <errorMessage>A Meter ID must be specified if Schedule by Meter is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Scheduling_Method</fullName>
        <active>true</active>
        <description>Ensures only one scheduling method, Calendar or Meter, is selected</description>
        <errorConditionFormula>IF( SBC__c = True &amp;&amp;  SBM__c = True, true, false)</errorConditionFormula>
        <errorMessage>Only one scheduling method, Calendar or Meter, can be selected</errorMessage>
    </validationRules>
</CustomObject>